--- a/gb/12/6/23/n3619555.md
+++ b/gb/12/6/23/n3619555.md
@@ -1,6 +1,6 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/zmvsty371/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/zmvsty371/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/zmvsty371/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/zmvsty371/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/zmvsty371/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/zmvsty371/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/zmvsty371/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/zmvsty371/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/zmvsty371/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/zmvsty371/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/zmvsty371/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/zmvsty371/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/zmvsty371/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/zmvsty371/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/zmvsty371/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/zmvsty371/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/zmvsty371/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/zmvsty371/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/zmvsty371/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/zmvsty371/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/zmvsty371/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/zmvsty371/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/zmvsty371/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/zmvsty371/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/zmvsty371/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/zmvsty371/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/zmvsty371/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/zmvsty371/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/zmvsty371/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/zmvsty371/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/zmvsty371/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/zmvsty371/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/zmvsty371/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/zmvsty371/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/zmvsty371/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/zmvsty371/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/zmvsty371/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/zmvsty371/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/zmvsty371/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/zmvsty371/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/zmvsty371/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/zmvsty371/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/zmvsty371/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/zmvsty371/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/zmvsty371/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/zmvsty371/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/zmvsty371/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/auytan380/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/auytan380/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/auytan380/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/auytan380/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/auytan380/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/auytan380/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/auytan380/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/auytan380/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/auytan380/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/auytan380/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/auytan380/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/auytan380/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/auytan380/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>从中国文化的全息特性 看中国舞</h2>
 
 <h6></h6>
@@ -15,8 +15,7 @@
 <p>在路上，谢石看到一个人也在测字，他就让这个人测一下自己的名，就是“石”字。那个人说你旁边跟着“狱卒”，“石”见“卒”为“碎”字，兆头不好。又问狱卒姓什么，狱卒说姓皮。那人说“石”见“皮”为“破”字，恐怕你此次发配，有去无回。后来，果然谢石一直未被赦免，死在了岭南。 </p>
 <p><B>中国文化具全息性 超越西方</B></p>
 <p>
-	<img src="https://i.epochtimes.com/assets/uploads/2012/06/1206231043592223.jpg" alt="" title="" width="214" b="336"
-	class="size-large wp-image-6603749" /></a><br />之所以想起这个故事，是因为最近欣闻新唐人电视台将举办全世界中国舞舞蹈大赛，由此联想到中国文化的一种特性－－全息性。 </p>
+	<ahref=" https://i.epochtimes.com/assets/uploads/2012/06/1206231043592223.jpg" target="_blank" rel="noreferrer noopener"></a><br />之所以想起这个故事，是因为最近欣闻新唐人电视台将举办全世界中国舞舞蹈大赛，由此联想到中国文化的一种特性－－全息性。 </p>
 <p>我大学二年级时做物理实验，其中一项就是拍摄激光全息照片。将两束激光打在一个物体上拍照，成像后的照片无论剪得多碎，任何一个碎片都可以还原出被拍摄物体的全部信息。 </p>
 <p>现代西方科学的“全息”观点仍然停留在很浅薄的层次，而中国的中医早就知道一个人的耳朵、双足等都是这个人的全息缩影，所以针灸师只要在耳朵上针灸，就可以包治百病。再从“上医医国、中医医人、下医医病”，就可以知道治病、治人、治国，一理相通。这与儒家的“修身齐家治国平天下”，道家的“人法地、地法天、天法道、道法自然”，又一脉相承。 </p>
 <p>道家的全息观点就更加强了，他们认为人体就是宇宙的缩影，所以道家探究宇宙，不是用欧洲人这种望远镜来看，而是反过来以修炼的方式探究自己的人体，从中就可以得知宇宙的特性。文章的开头举的测字例子即说明，哪怕只是一个汉字，里面都孕育着巨大的天机。 </p>
@@ -37,47 +36,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/zmvsty371/djy/blob/master/gb/12/4/7/n3559928.md#1">守住方寸现商道</a></li>
-<li><a href="https://github.com/zmvsty371/djy/blob/master/gb/12/4/7/n3559957.md#1">古往今来 科学家多信神</a></li>
-<li><a href="https://github.com/zmvsty371/djy/blob/master/gb/12/4/9/n3561558.md#1">儿是冤家女是愁</a></li>
-<li><a href="https://github.com/zmvsty371/djy/blob/master/gb/12/4/10/n3562351.md#1">三不宝的郭文通</a></li>
-<li><a href="https://github.com/zmvsty371/djy/blob/master/gb/12/4/14/n3565431.md#1">古人特别的择婿方式</a></li>
-<li><a href="https://github.com/zmvsty371/djy/blob/master/gb/12/4/14/n3565462.md#1">宽容为大 多加忍让</a></li>
-<li><a href="https://github.com/zmvsty371/djy/blob/master/gb/12/4/14/n3565465.md#1">向孔子的马伕学习谈判</a></li>
-<li><a href="https://github.com/zmvsty371/djy/blob/master/gb/12/4/14/n3565476.md#1">中国古代知名预言简介</a></li>
-<li><a href="https://github.com/zmvsty371/djy/blob/master/gb/12/4/14/n3565480.md#1">中国古代知名预言简介</a></li>
-<li><a href="https://github.com/zmvsty371/djy/blob/master/gb/12/4/15/n3566019.md#1">守信重诺 为人之本</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/12/4/7/n3559928.md#1">守住方寸现商道</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/12/4/7/n3559957.md#1">古往今来 科学家多信神</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/12/4/9/n3561558.md#1">儿是冤家女是愁</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/12/4/10/n3562351.md#1">三不宝的郭文通</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/12/4/14/n3565431.md#1">古人特别的择婿方式</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/12/4/14/n3565462.md#1">宽容为大 多加忍让</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/12/4/14/n3565465.md#1">向孔子的马伕学习谈判</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/12/4/14/n3565476.md#1">中国古代知名预言简介</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/12/4/14/n3565480.md#1">中国古代知名预言简介</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/12/4/15/n3566019.md#1">守信重诺 为人之本</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/zmvsty371/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank">亿万人与东方一本奇书</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/20/n10158455.md#1" target="_blank">林辉：为何“六九届”学生少有成功人士？</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/15/n10977767.md#1" target="_blank">伊朗姑娘嘉扎尔?塔瓦纳艾(3) 骑向自由</a></li>
+<li><a href="https://github.com/ychojm359/ntdtv/blob/master/gb/2020/01/05/a102745738.md#1" target="_blank">响彻世界政坛的正义之声</a>  </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/26/n10932836.md#1" target="_blank">张林：间谍国（二）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/6/n11167851.md#1" target="_blank">天主教新闻网：中共的群体灭绝罪行</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/zmvsty371/djy/blob/master/gb/21/1/23/n12706624.md#1">【解密时分】诺查丹玛斯预言：彭斯和美国大选</a></li>
-<li><a href="https://github.com/zmvsty371/djy/blob/master/gb/21/1/23/n12706868.md#1">2021预测：全球瘟疫更具毁灭性 善恶大决战</a></li>
-<li><a href="https://github.com/zmvsty371/djy/blob/master/gb/21/1/23/n12707590.md#1">史前文明：地球上真的生活着三种人？</a></li>
-<li><a href="https://github.com/zmvsty371/djy/blob/master/gb/21/1/27/n12714549.md#1">美国女子死亡37秒 看到自己的身体与亡灵</a></li>
-<li><a href="https://github.com/zmvsty371/djy/blob/master/gb/21/1/18/n12695506.md#1">【命理】凡参与陷害的 无一例外都得报应</a></li>
-<li><a href="https://github.com/zmvsty371/djy/blob/master/gb/21/1/28/n12716805.md#1">【珍言真语】大陆亲友遭株连 王逸战：曙光必现</a></li>
-<li><a href="https://github.com/zmvsty371/djy/blob/master/gb/21/1/28/n12718641.md#1">【财商天下】大陆楼市热钱被驱 黄金时代终结？</a></li>
-<li><a href="https://github.com/zmvsty371/djy/blob/master/gb/21/1/28/n12717063.md#1">【西岸观察】拜登要动最高院 德州酿公投独立</a></li>
-<li><a href="https://github.com/zmvsty371/djy/blob/master/gb/21/1/27/n12715898.md#1">习近平女儿及姐夫个资泄露 24网民被判刑</a></li>
-<li><a href="https://github.com/zmvsty371/djy/blob/master/gb/21/1/27/n12714261.md#1">45共和党人反对 参议员：弹劾川普案已死</a></li>
-<li><a href="https://github.com/zmvsty371/djy/blob/master/gb/21/1/27/n12715248.md#1">刘乐妍涉贿选3度不到庭 检察官建议发通缉令</a></li>
-<li><a href="https://github.com/zmvsty371/djy/blob/master/gb/21/1/27/n12715248.md#1">刘乐妍涉贿选3度不到庭 检察官建议发通缉令</a></li>
-<li><a href="https://github.com/zmvsty371/djy/blob/master/gb/21/1/27/n12714202.md#1">周润发夫妇恩爱日常曝光 吵架总是发哥认错</a></li>
-<li><a href="https://github.com/zmvsty371/djy/blob/master/gb/21/1/27/n12716409.md#1">刘德华首开社交媒体账号 已吸引上千万粉丝</a></li>
-<li><a href="https://github.com/zmvsty371/djy/blob/master/gb/21/1/28/n12719147.md#1">郎朗晒照官宣得子 意外遭医生点名犯了个错</a></li>
-<li><a href="https://github.com/zmvsty371/djy/blob/master/gb/21/1/26/n12713761.md#1">回应飞国外喂鸽子传闻 梁朝伟自称电脑白痴</a></li>
-<li><a href="https://github.com/zmvsty371/djy/blob/master/gb/21/1/27/n12716459.md#1">水果干是比水果更好的药！中医师教你养生吃法</a></li>
-<li><a href="https://github.com/zmvsty371/djy/blob/master/gb/21/1/27/n12714549.md#1">美国女子死亡37秒 看到自己的身体与亡灵</a></li>
-<li><a href="https://github.com/zmvsty371/djy/blob/master/gb/21/1/28/n12717005.md#1">实测6款暖身热饮排名：姜茶第三、冠军是它</a></li>
-<li><a href="https://github.com/zmvsty371/djy/blob/master/gb/21/1/27/n12714810.md#1">巧合？ 1720、1820、1920、2020年都有瘟疫</a></li>
-<li><a href="https://github.com/zmvsty371/djy/blob/master/gb/21/1/27/n12715701.md#1">半夜抽筋2步骤缓解 吃这些食物能预防</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/12/n13734778.md#1">【百年真相】替毛背锅“红色特工”潘汉年惨死</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/5/n13727490.md#1">【百年真相】密谋“金融政变” 肖建华将现身？</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/28/n13747559.md#1">一首名曲奏出大提琴前所未有的力量</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/29/n13748202.md#1">【未解之谜】通行灵界的科学家之二 天堂见闻</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/18/n13739799.md#1">【奇梦】姻缘天定 女子依梦得夫 男子依梦得妻</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/4/n13752508.md#1">【唐瑞讲故事】睡美人</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/4/n13752277.md#1">【马克时空】预警机、侦察机扮奇兵 助乌军精准打击俄军</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/4/n13752411.md#1">【时事军事】苏-35S被米格-29击落 刺痛了谁？</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751784.md#1">中国最富城市之一深圳降薪 钱荒引爆民怨</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751624.md#1">中共吹嘘“最大常规航母” 分析：美国早已淘汰</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751705.md#1">外交人事洗牌 杨洁篪王毅继任人选引猜测</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751953.md#1">刚送完满月礼盒 昆凌首晒产后全身照惊呆网友</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751923.md#1">港星杨英伟出售千万房产 已举家移民奥地利</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751832.md#1">评论：《壮志凌云2》证明好莱坞无需中国市场</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751310.md#1">张娜拉6月底结婚 赞新郎笑容美好且诚实善良</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/2/n13751191.md#1">客串韩剧下周播 范冰冰晒运动瘦身照宣传造势</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/26/n13746023.md#1">腰痛是肾脏在求救？肾是沉默器官 4症状要警惕</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/1/n13750249.md#1">长白发原因不一定是衰老！2种方法白发变黑发</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751690.md#1">危险长新冠4类人警惕 疫苗也挡不住？1招改善</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751309.md#1">研究发现人类肝脏永远年轻 只有不到三岁</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/4/n13752195.md#1">5个早上常见的习惯 会降低睡眠品质</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/zmvsty371/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/zmvsty371/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/12/6/23/n3619555.htm">从中国文化的全息特性 看中国舞</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/auytan380/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/auytan380/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/12/6/23/n3619555.htm">从中国文化的全息特性 看中国舞</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/zmvsty371/djy/blob/master/gb/12/6/23/n3619555.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/zmvsty371/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zmvsty371/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/zmvsty371/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/zmvsty371/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/zmvsty371/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zmvsty371/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/zmvsty371/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zmvsty371/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/zmvsty371/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zmvsty371/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/zmvsty371/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zmvsty371/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/zmvsty371/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zmvsty371/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/zmvsty371/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zmvsty371/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/zmvsty371/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zmvsty371/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/zmvsty371/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zmvsty371/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/zmvsty371/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zmvsty371/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/zmvsty371/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zmvsty371/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/zmvsty371/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zmvsty371/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/zmvsty371/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zmvsty371/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/zmvsty371/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zmvsty371/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/zmvsty371/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zmvsty371/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/zmvsty371/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zmvsty371/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/zmvsty371/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zmvsty371/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/zmvsty371/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zmvsty371/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/zmvsty371/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zmvsty371/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/zmvsty371/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zmvsty371/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/zmvsty371/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zmvsty371/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/zmvsty371/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zmvsty371/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/zmvsty371/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zmvsty371/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/auytan380/djy/blob/master/gb/12/6/23/n3619555.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/auytan380/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/auytan380/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/auytan380/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
